--- a/index.html
+++ b/index.html
@@ -2,108 +2,108 @@
 <html>
 
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/@mdi/font@3.x/css/materialdesignicons.min.css" rel="stylesheet">
   <link href="index.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
 </head>
 
 <body>
 
-
+  <h1 style="color:white">MikaRika見分けちゃいます</h1>
   <div id="app" class="example-full">
+    <h2>フリー素材双子アイドルのMikaRikaをAIで見分けます。<br><a href="http://mika-rika-free.jp/">公式サイト</a>からDLした画像で試してみてください。</h2><br>
     <div class="example-simple">
-        <div class="upload">
-          <ul>
-            <li v-for="(file, index) in files" :key="file.id">
-              <span>ファイル名：{{file.name}}</span> ｜
-              <span>ファイルサイズ：{{file.size | formatSize}}バイト</span> -
-              <span v-if="file.error">{{file.error}}</span>
-              <span v-else-if="file.success">success</span>
-              <span v-else-if="file.active">active</span>
-              <span v-else-if="file.active">active</span>
-              <span v-else></span>
-            </li>
-          </ul>
-          <div class="example-btn">
-            <file-upload
-              class="btn btn-primary"
-              post-action="http://31565865.ngrok.io"
-              extensions="gif,jpg,jpeg,png,webp"
-              accept="image/png,image/gif,image/jpeg,image/webp"
-              :multiple="true"
-              :size="1024 * 1024 * 10"
-              v-model="files"
-              @input-filter="inputFilter"
-              @input-file="inputFile"
-              ref="upload">
-              <i class="fa fa-plus"></i>
-              Select files
-            </file-upload>
-            <button type="button" class="btn btn-success" v-if="!$refs.upload || !$refs.upload.active" @click.prevent="$refs.upload.active = true">
-              <i class="fa fa-arrow-up" aria-hidden="true"></i>
-              Start Upload
-            </button>
-            <button type="button" class="btn btn-danger"  v-else @click.prevent="$refs.upload.active = false">
-              <i class="fa fa-stop" aria-hidden="true"></i>
-              Stop Upload
-            </button>
-          </div>
+      <div class="upload">
+        <ul>
+          <li v-for="(file, index) in files" :key="file.id">
+            <span>ファイル名：{{file.name}}</span> ｜
+            <span>ファイルサイズ：{{file.size || formatSize}}バイト</span> -
+            <span v-if="file.error">{{file.error}}</span>
+            <span v-else-if="file.success">success</span>
+            <span v-else-if="file.active">active</span>
+            <span v-else-if="file.active">active</span>
+            <span v-if="file.response.message === 'notFound'">顔が検出できませんでした</span>
+            <span v-else-if="file.response.message === 'unknown'">不明な人物です</span>
+            <span v-else-if="file.response.message === 'Mika'">Mikaさんです</span>
+            <span v-else-if="file.response.message === 'Rika'">Rikaさんです</span>
+            <span v-else-if="file.response.message === 'MikaRika'">MikaさんとRikaさんです</span>
+          </li>
+        </ul>
+        <div class="example-btn">
+          <file-upload class="btn btn-primary" post-action="https://mikarikarecognition.takeaship.now.sh" extensions="gif,jpg,jpeg,png,webp"
+            accept="image/png,image/gif,image/jpeg,image/webp" :multiple="true" :size="1024 * 1024 * 10" v-model="files"
+            @input-filter="inputFilter" @input-file="inputFile" ref="upload">
+            <i class="fa fa-plus"></i>
+            Select files
+          </file-upload>
+          <button type="button" class="btn btn-success" v-if="!$refs.upload || !$refs.upload.active"
+            @click.prevent="$refs.upload.active = true">
+            <i class="fa fa-arrow-up" aria-hidden="true"></i>
+            Start Upload
+          </button>
+          <button type="button" class="btn btn-danger" v-else @click.prevent="$refs.upload.active = false">
+            <i class="fa fa-stop" aria-hidden="true"></i>
+            Stop Upload
+          </button>
         </div>
       </div>
-</div>
+    </div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue-upload-component"></script>
   <script>
     Vue.component('file-upload', VueUploadComponent);
     new Vue({
-  el: '#app',
-  data: {
-    files: []
-  },
-  components: {
-    FileUpload: VueUploadComponent
-  },
-  methods: {
-    /**
-     * Has changed
-     * @param  Object|undefined   newFile   Read only
-     * @param  Object|undefined   oldFile   Read only
-     * @return undefined
-     */
-    inputFile: function (newFile, oldFile) {
-      if (newFile && oldFile && !newFile.active && oldFile.active) {
-        // Get response data
-        console.log('response', newFile.response)
-        if (newFile.xhr) {
-          //  Get the response status code
-          console.log('status', newFile.xhr.status)
-        }
-      }
-    },
-    /**
-     * Pretreatment
-     * @param  Object|undefined   newFile   Read and write
-     * @param  Object|undefined   oldFile   Read only
-     * @param  Function           prevent   Prevent changing
-     * @return undefined
-     */
-    inputFilter: function (newFile, oldFile, prevent) {
-      if (newFile && !oldFile) {
-        // Filter non-image file
-        if (!/\.(jpeg|jpe|jpg|gif|png|webp)$/i.test(newFile.name)) {
-          return prevent()
-        }
-      }
+      el: '#app',
+      data: {
+        files: [],
+      },
+      components: {
+        FileUpload: VueUploadComponent
+      },
+      methods: {
+        /**
+         * Has changed
+         * @param  Object|undefined   newFile   Read only
+         * @param  Object|undefined   oldFile   Read only
+         * @return undefined
+         */
+        inputFile: function (newFile, oldFile) {
+          if (newFile && oldFile && !newFile.active && oldFile.active) {
+            // Get response data
+            console.log('response', newFile.response)
+            if (newFile.xhr) {
+              //  Get the response status code
+              console.log('status', newFile.xhr.status)
+            }
+          }
+        },
+        /**
+         * Pretreatment
+         * @param  Object|undefined   newFile   Read and write
+         * @param  Object|undefined   oldFile   Read only
+         * @param  Function           prevent   Prevent changing
+         * @return undefined
+         */
+        inputFilter: function (newFile, oldFile, prevent) {
+          if (newFile && !oldFile) {
+            // Filter non-image file
+            if (!/\.(jpeg|jpe|jpg|gif|png|webp)$/i.test(newFile.name)) {
+              return prevent()
+            }
+          }
 
-      // Create a blob field
-      newFile.blob = ''
-      let URL = window.URL || window.webkitURL
-      if (URL && URL.createObjectURL) {
-        newFile.blob = URL.createObjectURL(newFile.file)
+          // Create a blob field
+          newFile.blob = ''
+          let URL = window.URL || window.webkitURL
+          if (URL && URL.createObjectURL) {
+            newFile.blob = URL.createObjectURL(newFile.file)
+          }
+        }
       }
-    }
-  }
-});
+    });
   </script>
 </body>
 
